force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/OriginalDiscountScheduleExternalId__c.field-meta.xml
<CustomField>
    <fullName>OriginalDiscountScheduleExternalId__c</fullName>
    <formula>SBQQ__OriginalDiscountSchedule__r.cpqma_ExternalId__c</formula>
    <label>OriginalDiscountScheduleExternalId</label>
    <type>Text</type>
</CustomField>