force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/PricebookExternalId__c.field-meta.xml
<CustomField>
    <fullName>PricebookExternalId__c</fullName>
    <formula>SBQQ__Pricebook__r.cpqma_ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PricebookExternalId</label>
    <type>Text</type>
</CustomField>