force-app/main/default/objects/SBQQ__DiscountSchedule__c/fields/ProductExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProductExternalId__c</fullName>
    <formula>SBQQ__Product__r.cpqma_ExternalId__c</formula>
    <label>ProductExternalId</label>
    <type>Text</type>
</CustomField>